# final-nn

./: autoencoder_neural_network.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
